# ls2file

./: README.md  pyproject.toml
src/ls2file/: cli.py
