[project]
name = "ls2file"
version = "0.1.0"
description = "Dump a recursive file listing with timestamps to a TSV file"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
ls2file = "ls2file.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ls2file"]
